$ 42
  % v current
  _ 2012-05-04
  ! Bugfixes
    * Fix Facebook SSO
    - Upgraded to Jackson 2.0.2

$ 41
  % v 2.2.6
  _ 2012-04-27
  ! More ICS controls and maintenance
    * Lockscreen and notification playback control (ICS)
    * Fixed incorrect repeats after track completion in certain ICS builds
    * Various bug fixes
    - Easter egg: alarm clock
    - Fixed notification close button action
    - Fixed empty stream at signup
    - Proxy crashes
    - Fixed resume after playback failure logic
    - Sync backoff logic
    - fixed playback service component handling (which will fix service lifecycle)

$ 40
  % v 2.2.5
  _ 2012-03-16
  ! Maintenance
    * Fixed crashes for certain versions of HTTPClient
    * Fixed email confirmation nag
    - Upgraded java-api-wrapper (safeExecute(...))

$ 39
  % v 2.2.4
  _ 2012-03-12
  ! Maintenance
    * refreshing streams to get rid of incorrect items
    * small bug fixes

$ 37
  % v 2.2.3
  _ 2012-03-09
  ! Maintenance
    * Fixes for background sync workflow
    * Fixed some missing sounds
    - Track metadata (counts + type + cached)
    - Force sync after push notification
    - More tracking variables (plan + likes)

$ 36
  % v 2.2.2
  _ 2012-02-24
  ! Maintenance
    * Fixed "Find Friends"
    - Mobile proxy support (might fix 3G/4G streaming errors)
    - Finished up AT Internet tracking (visitor+custom vars, rich media)

$ 35
  % v 2.2.1
  _ 2012-02-16
  ! Maintenance
    * Fixed ICS notifications
    * Push notifications for followers
    - AT Internet tracking

$ 34                                                                                                                  x
  % v 2.2.0
  _ 2012-02-14
  ! Valentine's special
    * Improved responsiveness
    * Artwork in notifications
    * Push notifications for likes and comments
    * Search for sounds in Android Quick Search Box (must be manually enabled in system search settings)
    - Local caching of sounds, users & activities

$ 33
  % v 2.1.2